# clust-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  REMOTE_PLAN.md
.claude/agents/: branch-feature-checklist.md  clust-cli-installer.md  convention-checker.md  finalize-and-pr.md
.claude/skills/check/: SKILL.md
.claude/skills/finish/: SKILL.md
.claude/skills/latest/: SKILL.md
.claude/skills/todo/: SKILL.md
.claude/skills/worktree/: SKILL.md
.github/workflows/: ci.yml  early-access-release.yml  release.yml
crates/clust-cli/: Cargo.toml
crates/clust-cli/src/: add_task_modal.rs  batch_deps_modal.rs  cli.rs  context_menu.rs  create_agent_modal.rs  create_batch_modal.rs  detached_agent_modal.rs  edit_field_modal.rs  edit_prompt_modal.rs  editor.rs  format.rs  hub_launcher.rs  import_batch_modal.rs  ipc.rs  main.rs  orchestrator_modal.rs  output_filter.rs  pool_launcher.rs  repo_modal.rs  schedule_modal.rs  schedule_task_modal.rs  scroll_break.rs  scrollback.rs  search_modal.rs  syntax.rs  terminal.rs  terminal_emulator.rs  theme.rs  timer_modal.rs  ui.rs  version.rs  window_view.rs  worktree.rs
crates/clust-cli/src/overview/: gitdiff.rs  input.rs  mod.rs  screen.rs  term_complete.rs
crates/clust-cli/src/schedule/: mod.rs
crates/clust-cli/src/tasks/: mod.rs
crates/clust-cli/tests/: cli_smoke.rs
crates/clust-hub/: Cargo.toml
crates/clust-hub/src/: agent.rs  batch.rs  db.rs  inbox.rs  ipc.rs  lib.rs  main.rs  orchestrator.rs  orchestrator_validate.rs  repo.rs  scheduler.rs  tray.rs
crates/clust-hub/tests/: agent_integration.rs
crates/clust-ipc/: Cargo.toml
crates/clust-ipc/src/: agents.rs  batch_json.rs  branch.rs  lib.rs
crates/clust-ipc/tests/: socket_integration.rs
crates/clust-pool/: Cargo.toml
crates/clust-pool/src/: agent.rs  db.rs  ipc.rs  lib.rs  main.rs  repo.rs  tray.rs
crates/clust-pool/tests/: agent_integration.rs
docs/: README.md  architecture.md  commands.md  hub.md  pool.md  storage.md  terminal-multiplexing.md  terminal-ui.md  theme.md
