[package]
name = "clust-cli"
version = "0.0.4"
edition = "2021"

[[bin]]
name = "clust"
path = "src/main.rs"

[dependencies]
clust-ipc = { path = "../clust-ipc" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "io-std", "macros", "sync", "signal", "time"] }
ratatui = "0.29"
crossterm = "0.28"
which = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
