[package]
name = "clust-ipc"
version = "0.0.8"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
tokio = { version = "1", features = ["io-util", "net"] }
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
tempfile = "3"
