[package]
name = "clust-pool"
version = "0.0.7"
edition = "2021"

[lib]
name = "clust_pool"
path = "src/lib.rs"

[[bin]]
name = "clust-pool"
path = "src/main.rs"

[dependencies]
clust-ipc = { path = "../clust-ipc" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "sync", "signal", "fs", "time"] }
libc = "0.2"
tray-icon = "0.21"
tao = "0.35"
portable-pty = "0.8"
rand = "0.8"
chrono = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }

[dev-dependencies]
tempfile = "3"
